finished screenshot capturing
added screenshot for marching cube
added fpsmeter.js

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="/js/ui/stats.js"></script>
     <script type="text/javascript" src="/js/ui/jscolor.js"></script>
     <script type="text/javascript" src="/js/ui/slick.min.js"></script>
+    <script type="text/javascript" src="/js/ui/fpsmeter.min.js"></script>
     <!------------ UI CSS ------------>
     <link type='text/css' rel='stylesheet' href='/css/slick.css' />
     <link type='text/css' rel='stylesheet' href='/css/animate.css' />
@@ -159,7 +160,7 @@
             </div>
             <div class="modal-footer">
                 <a href="#" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
-                <a href="#" download="image.png" class="waves-effect waves-light blue accent-3 btn save-button">Download</a>
+                <a href="#" download="Your-Image.png" class="waves-effect waves-light blue accent-3 btn save-button">Download</a>
             </div>
         </div>
         <div class="viewer-container">
