--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -2043,7 +2043,7 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
 .monitor-container {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
 }
 
 #stats {
@@ -2246,4 +2246,12 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
 .my_row {
     margin-left: 0;
     margin-right: 0;
+}
+
+.monitor-container > div {
+    position: relative !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    right: 0 !important;
+    left: 0 !important;
 }
