--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -972,6 +972,11 @@ img.brand-devices {
     padding: 14px 16px;
 }
 
+#screenshot-container .dropdown-content li.disabled>span {
+    color: rgba(0,0,0,0.3);
+    background-color: transparent;
+}
+
 #filename:focus {
     border-bottom: 1px solid #2979FF;
     -webkit-box-shadow: 0 1px 0 0 #2979FF;
@@ -1203,6 +1208,13 @@ span.algorithm-name,
     border-bottom: 1px solid #33353a;
 }
 
+.marching-cube-setting .value {
+    width: 25%;
+    text-align: center;
+    border-bottom: 1px solid #33353a;
+    font-size: 13px;
+}
+
 .attribute-config input[type="range"],
 .opacity input[type="range"] {
     display: block;
@@ -1388,62 +1400,6 @@ span.algorithm-name,
     border: 0.5px solid #333;
 }
 
-.original {
-    background: #9e9e9e;
-    background: -webkit-linear-gradient(#9e9e9e, #607d8b);
-    background: -o-linear-gradient(#9e9e9e, #607d8b);
-    background: -moz-linear-gradient(#9e9e9e, #607d8b);
-    background: linear-gradient(#9e9e9e, #607d8b);
-}
-
-.moonlit-asteroid {
-    background: #0F2027;
-    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
-    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
-}
-
-.grade-grey {
-    background: #bdc3c7;
-    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);
-    background: linear-gradient(to right, #2c3e50, #bdc3c7);
-}
-
-.red-sunset {
-    background: #355C7D;
-    background: -webkit-linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
-    background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
-}
-
-.lawrencium {
-    background: #0f0c29;
-    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
-    background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
-}
-
-.celestial {
-    background: #C33764;
-    background: -webkit-linear-gradient(to right, #1D2671, #C33764);
-    background: linear-gradient(to right, #1D2671, #C33764);
-}
-
-.royal {
-    background: #141E30;
-    background: -webkit-linear-gradient(to right, #243B55, #141E30);
-    background: linear-gradient(to right, #243B55, #141E30);
-}
-
-.frost {
-    background: #000428;
-    background: -webkit-linear-gradient(to right, #004e92, #000428);
-    background: linear-gradient(to right, #004e92, #000428);
-}
-
-.titanium {
-    background: #283048;
-    background: -webkit-linear-gradient(to right, #859398, #283048);
-    background: linear-gradient(to right, #859398, #283048);
-}
-
 .opacity {
     display: flex;
     padding: 20px 25px;
@@ -1460,48 +1416,33 @@ span.algorithm-name,
     width: 60% !important;
 }
 
-.texture-min-color,
-.texture-max-color {
+.texture-color-picker.texture-color-picker {
+    padding: 0 0 0 15px;
+    margin: 0;
+}
+
+.tb-color {
     display: flex;
-    align-items: center;
+    flex-direction: column;
 }
 
-.min-color-picker,
-.max-color-picker {
-    padding: 10px 16px;
+.tb-title {
+    text-align: center;
     font-weight: 500;
-    border: none;
-    background-color: #2196F3;
-    color: white;
-    border-radius: 2px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    outline: none;
-    transition: box-shadow 0.1s ease;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-}
-
-.texture-min-color span,
-.texture-max-color span {
-    width: 22%;
-    font-size: 13px;
-    text-align: center;
-    margin-right: 8px;
-}
-
-.texture-min-color .jscolor,
-.texture-max-color .jscolor {
-    width: 36%;
-    font-size: 14px;
-    font-weight: 700;
-    text-align: center;
+    text-transform: uppercase;
+    font-size: 15px;
+    margin-bottom: 10px;
 }
 
 .marching-cube-setting.hidden {
     display: none;
+}
+
+.iso-slider {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .vtk-color,
@@ -1510,8 +1451,13 @@ span.algorithm-name,
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: flex-end;
-    padding: 20px 0;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+.sinh-color {
+    flex-direction: column-reverse;
 }
 
 .vtk-color a,
@@ -1780,6 +1726,11 @@ span.algorithm-name,
     outline: 1.5px solid #FFF;
     width: 70%;
     height: calc(100vh - 70px);
+}
+
+.three-dimemsion.forced-fullwidth {
+    width: 100%;
+    height: 100%;
 }
 
 .three-dimemsion .title {
@@ -2254,4 +2205,10 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
     bottom: 0 !important;
     right: 0 !important;
     left: 0 !important;
+}
+
+#color-picker-container {
+    padding: 15px 15px;
+    display: flex;
+    justify-content: center;
 }
