--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -482,7 +482,7 @@
                                         <i class="material-icons">add_a_photo</i>
                                         <span class="name">Screenshot</span>
                                     </div>
-                                    <div class="attribute-config ray-setting">
+                                    <div class="attribute-config">
                                         <div class="input-field col s12 take-screenshot">
                                             <select class="screenshot-option">
                                                 <option value="3d" selected>3D -  Volume</option>
