--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -116,7 +116,7 @@
         </div>
         <div class="slider-container">
             <div class="upload-container">
-                <div class="title">Try DiRea now</div>
+                <div class="title">Try it now</div>
                 <div class="upload-button">Upload</div>
                 <input id="file_inp" type="file" multiple />
             </div>
@@ -239,7 +239,7 @@
                                             </div>
                                             <a class="btn waves-effect waves-light blue accent-3 apply-iso">Apply</a>
                                         </div>
-                                        <div class="attribute-config texture-setting hidden">
+                                        <div class="attribute-config texture-setting hidden" style="padding-top:20px;">
                                             <div class="input-field col s12 texturebased-algorithm">
                                                 <select>
                                                       <option value="" disabled selected>Choose your option</option>
@@ -272,6 +272,19 @@
                                             <div class="value">
                                                 0
                                             </div>
+                                        </div>
+                                        <div class="attribute-title texture-setting hidden">
+                                            Window
+                                        </div>
+                                        <div class="attribute-config texture-setting hidden">
+                                            <div class="attribute">Window Low</div>
+                                            <input class="texture-window-low" type="range" min="0" max="100" step="1" value="0">
+                                            <div class="value">0</div>
+                                        </div>
+                                        <div class="attribute-config texture-setting hidden">
+                                            <div class="attribute">Window High</div>
+                                            <input class="texture-window-high" type="range" min="0" max="100" step="1" value="0">
+                                            <div class="value">0</div>
                                         </div>
                                     </div>
                                 </div>
@@ -353,19 +366,19 @@
                                         <i class="material-icons drop-down rotated">keyboard_arrow_up</i>
                                     </div>
                                     <div class="config opened">
-                                        <div class="attribute-title texture-setting hidden">
-                                            Window
-                                        </div>
-                                        <div class="attribute-config texture-setting hidden">
-                                            <div class="attribute">Window Low</div>
-                                            <input class="texture-window-low" type="range" min="0" max="100" step="1" value="0">
-                                            <div class="value">0</div>
-                                        </div>
-                                        <div class="attribute-config texture-setting hidden">
-                                            <div class="attribute">Window High</div>
-                                            <input class="texture-window-high" type="range" min="0" max="100" step="1" value="0">
-                                            <div class="value">0</div>
-                                        </div>
+<!--                                        <div class="attribute-title texture-setting hidden">-->
+<!--                                            Window-->
+<!--                                        </div>-->
+<!--                                        <div class="attribute-config texture-setting hidden">-->
+<!--                                            <div class="attribute">Window Low</div>-->
+<!--                                            <input class="texture-window-low" type="range" min="0" max="100" step="1" value="0">-->
+<!--                                            <div class="value">0</div>-->
+<!--                                        </div>-->
+<!--                                        <div class="attribute-config texture-setting hidden">-->
+<!--                                            <div class="attribute">Window High</div>-->
+<!--                                            <input class="texture-window-high" type="range" min="0" max="100" step="1" value="0">-->
+<!--                                            <div class="value">0</div>-->
+<!--                                        </div>-->
                                         <div class="attribute-title">
                                             Slices
                                         </div>
