--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -594,7 +594,7 @@ tbody tr {
     text-transform: uppercase;
     font-size: 15px;
     font-weight: 300;
-    bottom: 10px;
+    bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 52;
@@ -2175,13 +2175,15 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
 }
 
 .dicom-canvas {
-    width: 70px;
-    height: 70px;
-    position: absolute;
-    top: 30%;
-    transform: translateY(-50%);
-    right: 0;
-    z-index: 999;
+    width: 120px;
+    height: 120px;
+    padding: 10px;
+    margin-bottom: 10px;
+    display: flex;
+}
+
+.dicom-canvas canvas {
+    border: 1px solid #FFFFFF;
 }
 
 .dicom-extraction {
@@ -2230,4 +2232,34 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
     padding: 15px 15px;
     display: flex;
     justify-content: center;
+}
+
+.boundary-container {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-bottom: 100px;
+}
+
+.boundary-info {
+    padding-left: 10px;
+    color: #FFFFFF;
+}
+
+.boundary-info p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.modal {
+    z-index: 9999;
+}
+
+.modal.modal-fixed-footer .modal-content {
+    box-sizing: border-box;
+}
+
+.modal .modal-footer {
+    box-sizing: border-box;
 }
